default/objects/success__Behaviour_Observation__c/success__Behaviour_Observation__c.object-meta.xml
<CustomObject>
    <description>The Observation structure allows interactions that are performed by licensed SuMo users within Salesforce to be discreetly recorded, with this information being the basis for Insights and Rewards.</description>
    <label>Observation</label>
    <nameField>
        <displayFormat>BOB-{00000}</displayFormat>
        <label>Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>