default/objects/success__Behaviour_Observation__c/fields/success__Base_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>success__Base_Behaviour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Behaviour</label>
    <referenceTo>success__Achievement__c</referenceTo>
    <relationshipName>Behaviour_Events</relationshipName>
    <type>Lookup</type>
</CustomField>