default/objects/success__Behaviour_Observation__c/fields/success__Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Occurrence_Date__c</fullName>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>