default/objects/success__Behaviour_Observation__c/fields/success__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>success__Record_ID__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>