default/objects/success__Behaviour_Observation__c/fields/success__Tracked_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>success__Tracked_Field_Value__c</fullName>
    <label>Tracked Field Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>