default/objects/success__Behaviour_Observation__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__Base_Behaviour__c</columns>
    <columns>success__Function_Value__c</columns>
    <columns>success__Occurrence_Date__c</columns>
    <columns>success__User__c</columns>
    <columns>success__Record_ID__c</columns>
    <columns>success__Related_Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>